--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,3 +6,5 @@ set(HEADER_FILES Payroll.h)
 set(SOURCE_FILES Payroll.cpp)
 
 add_library(payroll_library ${SOURCE_FILES} ${HEADER_FILES})
+
+add_subdirectory (payrolltest)
