change project name

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(payroll)
+project(payroll_library)
 
 
 set(HEADER_FILES Payroll.h)
@@ -7,4 +7,4 @@ set(SOURCE_FILES Payroll.cpp)
 
 add_library(payroll_library ${SOURCE_FILES} ${HEADER_FILES})
 
-add_subdirectory (payrolltest)
+
